fix tooltip on mobile

--- a/assets/base.css
+++ b/assets/base.css
@@ -1514,7 +1514,7 @@ deferred-media {
 ==============================================================================*/
 
 #MainContent {
-  margin-bottom: 120px;
+  margin-bottom: -60px;
 }
 
 /*============================================================================
